TP-1700 fix button wrapping

--- a/public/themes/custom/palvelumanuaali/components/01-atoms/forms/_edit-forms.scss
+++ b/public/themes/custom/palvelumanuaali/components/01-atoms/forms/_edit-forms.scss
@@ -70,13 +70,12 @@ position: relative;
 
   .page-controls {
     margin-top: $space;
-    grid-row: 8;
+    grid-row: 7;
     grid-column: 1/3;
-    @include medium {
-      grid-column: 1/2;
+    @media (min-width:1100px) {
+      margin-left: 610px;
     }
     @include xl {
-      margin-left: 610px;
       grid-row: 5;
     }
     .button-wrapper {
@@ -84,10 +83,9 @@ position: relative;
       width: 100%;
       gap: $space-one-and-half;
       height: 48px;
-      flex-direction: column;
+      flex-direction: row;
       @include xl {
-        flex-direction: row;
-        justify-content: end;
+        justify-content: start;
       }
     }
   }
@@ -112,16 +110,17 @@ position: relative;
   }
 
   >#edit-actions {
-    grid-row: 7;
+    grid-row: 8;
     margin-top: $space;
     margin-bottom: $space;
     display: flex;
     grid-column: 1/3;
     gap: $space-one-and-half;
     flex-wrap: wrap;
-    @include large {
-    grid-column: 1/2;
-    flex-wrap: nowrap;
+    @media (min-width:1100px) {
+      grid-row: 7;
+      grid-column: 1/2;
+      flex-wrap: nowrap;
     }
     @include xl {
       grid-row: 5;
